@@ -1,3 +1,6 @@
+<h5>1.1.1 Stable</h5>  [2025/06/07]
+- last stable version for PHP 7 (goffy)
+ 
 <h5>1.1.1 RC1</h5>  [2023/02/28]
  - fixed bug with tpl file (goffy)
  - fixed missing default value smarty (goffy)
